# nubenube

./: .gitignore  CLAUDE.md  DESIGN-HANDOVER.md  README.md  index.html  install.sh  package-lock.json  package.json
.github/workflows/: 1-feature-ci.yml  2-pr-ci.yml  3-preprod-release.yml  4-prd-release.yml
docs/superpowers/plans/: 2026-05-31-nubenube-ui-redesign.md  2026-06-01-focus-model-and-hook-refactor.md  2026-06-02-distribution.md
docs/superpowers/specs/: 2026-05-31-nubenube-rework-design.md  2026-05-31-nubenube-ui-redesign-design.md  2026-06-01-focus-model-and-hook-refactor-design.md  2026-06-01-tracking-model-redesign-design.md  2026-06-02-custom-notification-sound-design.md  2026-06-02-distribution-design.md
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  connector.rs  db.rs  drift.rs  dto.rs  events_tail.rs  hooks_installer.rs  lib.rs  model.rs  notify.rs  settings.rs  store_paths.rs  watcher.rs  water.rs
src/components/: AppShell.tsx  Biome.tsx  Companion.tsx  IntroStory.tsx  NubeCreature.tsx  Takeover.tsx  UpdatePrompt.tsx  ui.tsx
src/lib/: api.ts  chime.ts  clay.ts  derive.ts  format.ts  mockData.ts  rescue.ts  sound.ts  updater.ts  useCountdown.ts
src/pages/: Home.tsx  Insights.tsx  ProjectDetail.tsx  Settings.tsx
src/store/: demo.ts  focus.ts  prefs.ts  settings.ts  updater.ts  usage.ts
src/theme/: tokens.css  units.ts
