[package]
name = "nubenube"
version = "0.3.3"
description = "Nube Nube — a gentle desktop focus companion powered by your Claude Code usage"
authors = ["Nube Nube"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The library name `app_lib` is referenced by `main.rs` (`app_lib::run()`).
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
# Core
tauri = { version = "2.11.2", features = ["tray-icon", "image-png", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Tauri plugins
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Usage connector + storage
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }
walkdir = "2"
notify = "6"
dirs = "5"
anyhow = "1"

# Active-window + idle (drift tracking). Both crates handle the platform specifics
# internally (macOS = no permission for app name + idle; Linux X11 full, Wayland fallback).
active-win-pos-rs = "0.11"
user-idle = "0.6"

# macOS: native NSWindow tweaks for the companion overlay — float over full-screen
# apps + all Spaces (fullScreenAuxiliary) and drag by the window background.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
